--- a/base/config/ACL4SSR_Online_Full_Netflix.ini
+++ b/base/config/ACL4SSR_Online_Full_Netflix.ini
@@ -74,6 +74,8 @@ custom_proxy_group=🎥 奈飞节点`select`(台湾|香港|日本|韩国|美国|
 enable_rule_generator=true
 overwrite_original_rules=true
 
+emoji=(?i:TW|Taiwan|新北|彰化|CHT|台湾|[^-]台|HINET),🇹🇼
+
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
