--- a/base/config/ACL4SSR_Online_Full_Netflix.ini
+++ b/base/config/ACL4SSR_Online_Full_Netflix.ini
@@ -75,7 +75,7 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 add_emoji=true
-remove_old_emoji=false
+remove_old_emoji=true
 emoji=(?i:TW|Taiwan|新北|彰化|CHT|台湾|[^-]台|HINET),🇹🇼
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
