--- a/base/config/ACL4SSR_Online_Full_Netflix.ini
+++ b/base/config/ACL4SSR_Online_Full_Netflix.ini
@@ -76,7 +76,6 @@ overwrite_original_rules=true
 
 add_emoji=true
 ;remove_old_emoji=true
-emoji=(?i:Bandwidth|expire|流量|时间|应急|过期),🏳️‍🌈
 emoji=(Ascension|阿森松),🇦🇨
 emoji=(Argentina|阿根廷),🇦🇷
 emoji=(Austria|Vienna|AU|奥地利|维也纳),🇦🇹
@@ -84,9 +83,9 @@ emoji=(Australia|Sydney|澳大利亚|澳洲|悉尼),🇦🇺
 emoji=(Belgium|比利时),🇧🇪
 emoji=(Brazil|Paulo|巴西|圣保罗),🇧🇷
 emoji=(Canada|CA|Montreal|Vancouver|加拿大|蒙特利尔|温哥华|楓葉|枫叶),🇨🇦
-emoji=(Switzerland|Zurich|瑞士|苏黎世),🇨🇭
+emoji=(Switzerland|SW|Zurich|瑞士|苏黎世),🇨🇭
 emoji=(Germany|法兰克福|德),🇩🇪
-emoji=(Denmark|丹麦),🇩🇰
+emoji=(Denmark|DA|丹麦),🇩🇰
 emoji=(Spain|西班牙|SP),🇪🇸
 emoji=(Europe|欧洲),🇪🇺
 emoji=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
@@ -118,6 +117,7 @@ emoji=(?i:TW|Taiwan|新北|彰化|CHT|台湾|[^-]台|HINET),🇹🇼
 emoji=(?i:HK|Hong.*?Kong|HKT|HKBN|HGC|WTT|CMI|[^-]港),🇭🇰
 emoji=(?i:CN|China|回国|中国|江苏|北京|上海|广州|深圳|杭州|常州|徐州|青岛|宁波|镇江|成都|back),🇨🇳
 emoji=(GR|希腊),🇬🇷
+emoji=(?i:Bandwidth|expire|流量|时间|应急|过期),🏳️‍🌈
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
