--- a/base/config/ACL4SSR_Online_Full_Netflix.ini
+++ b/base/config/ACL4SSR_Online_Full_Netflix.ini
@@ -82,11 +82,11 @@ emoji=(Austria|Vienna|AU|奥地利|维也纳),🇦🇹
 emoji=(Australia|Sydney|澳大利亚|澳洲|悉尼),🇦🇺
 emoji=(Belgium|比利时),🇧🇪
 emoji=(Brazil|Paulo|巴西|圣保罗),🇧🇷
-emoji=(Canada|CA|Montreal|Vancouver|加拿大|蒙特利尔|温哥华|楓葉|枫叶),🇨🇦
-emoji=(Switzerland|SW|Zurich|瑞士|苏黎世),🇨🇭
+emoji=(?i:CA|Canada|Montreal|Vancouver|加拿大|蒙特利尔|温哥华|楓葉|枫叶),🇨🇦
+emoji=(?i:SW|Switzerland|Zurich|瑞士|苏黎世),🇨🇭
 emoji=(Germany|法兰克福|德),🇩🇪
-emoji=(Denmark|DA|丹麦),🇩🇰
-emoji=(Spain|西班牙|SP),🇪🇸
+emoji=(?i:DA|Denmark|丹麦),🇩🇰
+emoji=(?i:SP|Spain|西班牙),🇪🇸
 emoji=(Europe|欧洲),🇪🇺
 emoji=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
 emoji=(France|Paris|法国|巴黎),🇫🇷
@@ -94,9 +94,9 @@ emoji=(Indonesia|Jakarta|印尼|印度尼西亚|雅加达),🇮🇩
 emoji=(Ireland|Dublin|IR|爱尔兰|都柏林),🇮🇪
 emoji=(India|Mumbai|印度|孟买),🇮🇳
 emoji=(Italy|Milan|意大利|米兰),🇮🇹
-emoji=(Japan|JP|Tokyo|Osaka|Saitama|日本|东京|大阪|埼玉|[^-]日),🇯🇵
+emoji=(?i:JP|Japan|Tokyo|Osaka|Saitama|日本|东京|大阪|埼玉|[^-]日),🇯🇵
 emoji=(North.*?Korea|朝鲜),🇰🇵
-emoji=(Korea|KR|KOR|首尔|韩|韓),🇰🇷
+emoji=(?i:KR|Korea|KOR|首尔|韩|韓),🇰🇷
 emoji=(Macao|澳门|CTM),🇲🇴
 emoji=(Malaysia|马来西亚),🇲🇾
 emoji=(Netherlands|荷兰|阿姆斯特丹),🇳🇱
@@ -117,7 +117,7 @@ emoji=(?i:TW|Taiwan|新北|彰化|CHT|台湾|[^-]台|HINET),🇹🇼
 emoji=(?i:HK|Hong.*?Kong|HKT|HKBN|HGC|WTT|CMI|[^-]港),🇭🇰
 emoji=(?i:CN|China|回国|中国|江苏|北京|上海|广州|深圳|杭州|常州|徐州|青岛|宁波|镇江|成都|back),🇨🇳
 emoji=(GR|希腊),🇬🇷
-emoji=(?i:Bandwidth|expire|流量|时间|应急|过期),🏳️‍🌈
+emoji=(?i:Bandwidth|expire|时间|应急|过期),🏳️‍🌈
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
